Removed footer fixing from App.js style.css and moved it into pages for better readability on mobile and PC devices too actually.

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -3,18 +3,13 @@ footer {
   background: #20525C;
   position: relative;
   color: #54C2CC;
-  position: fixed;
+  /* position: fixed;
   bottom: 0;
   left: 0;
-  right: 0;
+  right: 0; */
   padding: 3px;
   text-align: center;
   
-  /* margin: 100px 0px 0px 0px;
-  background-color: #353839;
-  height: 25vh;
-  width: 100%;
-  text-align: center; */
 }
 
 /* SOCIAL MEDIA BUTTONS */
